Fix: scrolling bug on firefox

--- a/kss_styleguide/custom-template/kss-assets/css/_kss-documentation.scss
+++ b/kss_styleguide/custom-template/kss-assets/css/_kss-documentation.scss
@@ -14,6 +14,7 @@ $kss-modifiers-name-color: $cowabunga;
   padding-top: 80px;
   background: $white;
   transition: opacity 0.4s ease-out;
+  overflow: auto;
 
   &.kss-state-active { opacity: 0.1; }
 
